fixed title, contact jumper

--- a/index.css
+++ b/index.css
@@ -43,6 +43,10 @@ nav, footer {
   display: inline;
   margin: 5px 0px 5px 15px;
   font-family: 'Permanent Marker', cursive;
+  background: linear-gradient(orange,red,green,blue);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
 }
 
 .name a {
@@ -97,11 +101,22 @@ section:nth-child(odd) {
 .project a {
   padding: 0 20px 0;
 }
+footer .accent {
+  background: linear-gradient(orange,red,green,blue);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+footer {
+  color: white;
+}
 
 footer a {
   color: white;
 }
 
+footer a:hover {
+  color: rgb(155, 104, 9);
+}
 
 /* phone screen */
 @media screen and (min-width: 320px) {
@@ -174,14 +189,7 @@ footer a {
   .links a:hover {
     color: limegreen;
   }
-  .name {
-    background: linear-gradient(orange,red,green,blue);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-  footer a:hover {
-    color: rgb(155, 104, 9);
-  }
+   
 }  
   
 /*tablet screen*/
